--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <h3 class="h3_home wow fadeIn" data-wow-delay="0.6s" style="text-shadow: 0px 8px 4px black, 0 0 25px black"> 
                     <!-- In conjunction with <a style="color:rgb(241, 173, 130)" href="http://www.adai.ai/dai/2024/" target="_blank"><b>DAI 2024</b></a> </p>  -->
                     In conjunction with <a style="color:rgb(241, 173, 130)" href="https://2024.acmmm.org/" target="_blank"><b>ACM MM 2024</b></a> </p> 
-                    28 October - 1 November, 2024 (9:00 - 17:00)</p>
+                    28 October - 1 November, 2024 (9:00 AM - 17:00 PM)</p>
                     Location: Melbourne, Australia</p>
                     <!-- Location: UTC-12, Singapore</p> -->
                 </h3>
