--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                             <li>Lifelong / Continual / Incremental / Online Learning</li>
                             <li>Few-shot & Transfer Learning related to Continual Learning</li>
                             <li>Applications and use-cases of Continual Learning</li>
-                            <li>Meta-learning & Curriculum learning & Active learning</li>
+                            <li>Meta-learning & Curriculum Learning & Active Learning</li>
                             <li>Reinforcement Learning and Robotics in Continual Learning</li>
                             <li>Ethical and Safety considerations for machines that can learn continuously</li>
                             <li>Continuous domain adaptation / Test-time adaptation</li>
@@ -164,9 +164,9 @@
                             <li>Multi-task and Continual Learning for MMFMs</li>
                             <li>Efficient training and inference of MMFMs</li>
                             <li>Parameter-efficient fine-tuning, prompting, and adapters for MMFMs</li>
-                            <li>Generative MMFMs (e.g. Text-to-image / Video /3D generation)</li>
+                            <li>Generative MMFMs (e.g. text-to-image / video /3D generation)</li>
                             <li>Ethics, risks, and fairness of MMFMs</li>
-                            <li>Benchmarks, Scenarios, evaluation protocols, and metrics for the above topics</li>
+                            <li>Benchmarks, scenarios, evaluation protocols, and metrics for the above topics</li>
                         </ul>
                         
                      </p> 
