--- a/index.html
+++ b/index.html
@@ -294,8 +294,8 @@
                         <ul>
                             <li>The CL-24 will be held together with ACM MM 2024.</li>
                             <li>Accepted papers will be presented at the workshop and authors retain the right to submit them to other journals or conferences.</li>
-                            <li>We invite submissions of original research papers addressing but not limited to the topics as listed above. Submissions should adhere to the ACM Multimedia 2024 formatting guidelines and will undergo a rigorous peer-review process. The template can be found via: <a style="color:rgb(241, 173, 130)" href="https://2024.acmmm.org/" target="_blank"><b>Template Link</b></a></li>
-                            <li>Papers have to be submitted via: <a style="color:rgb(241, 173, 130)" href="https://2024.acmmm.org/" target="_blank"><b>Submit Link</b></a></li>
+                            <li>We invite submissions of original research papers addressing but not limited to the topics as listed above. Submissions should adhere to the ACM Multimedia 2024 formatting guidelines and will undergo a rigorous peer-review process. The template can be found via: <a href="https://2024.acmmm.org/files/ACM-MM24-paper-templates.zip"><button id="submit"><b>Template</b></button></a></li>
+                            <li>Papers have to be submitted via: <a href=""><button id="submit"><b>Submit a Paper</b></button></a></li>
                         </ul>
                     </p> 
                 </div>
