--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
              <div style="background-color: rgba(0,0,0,0.5)">
                 <!-- <h1 class="h1_home wow  animated animated" data-wow-delay="0.4s" style="color: white; text-shadow: black 0px 0px 8px; visibility: visible; animation-delay: 0.4s;">2<sup>nd</sup> Workshop on Advances in Language and Vision Research (ALVR)</h1> -->
                 
-                <h1 class="h1_home wow fadeIn" data-wow-delay="0.4s" style="text-shadow: 0 0 8px #000000;"> Continual Learning meets Multimodal Foundation Models: <br>Fundamentals and Advances</h1>
+                <h1 class="h1_home wow fadeIn" data-wow-delay="0.4s" style="text-shadow: 0 0 8px #000000;"> <br>Continual Learning meets Multimodal Foundation Models: <br>Fundamentals and Advances</h1>
                 <!-- <br> -->
                 <h3 class="h3_home wow fadeIn" data-wow-delay="0.6s" style="text-shadow: 0px 8px 4px black, 0 0 25px black"> 
                     <!-- In conjunction with <a style="color:rgb(241, 173, 130)" href="http://www.adai.ai/dai/2024/" target="_blank"><b>DAI 2024</b></a> </p>  -->
