--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@
                             <li>The CL-24 will be held together with ACM MM 2024.</li>
                             <li>Accepted papers will be presented at the workshop and authors retain the right to submit them to other journals or conferences.</li>
                             <li>We invite submissions of original research papers addressing but not limited to the topics as listed above. Submissions should adhere to the ACM Multimedia 2024 formatting guidelines and will undergo a rigorous peer-review process. The template can be found via: <a href="https://2024.acmmm.org/files/ACM-MM24-paper-templates.zip"><button id="submit"><b>Template</b></button></a></li>
+                            <li>Submissions may vary in length from 4 to 8 pages, with additional pages permitted for the reference section (up to 2 pages). There is no distinction between long and short papers, but authors are free to determine the appropriate length for their paper.</li>
                             <li>Papers have to be submitted via: <a href="https://openreview.net/group?id=acmmm.org/ACMMM/2024/Workshop/CL"><button id="submit"><b>Submit a Paper</b></button></a></li>
                         </ul>
                     </p> 
