--- a/index.html
+++ b/index.html
@@ -430,12 +430,54 @@
         <div class="container">
             <div class="row">
                 <div class="wow fadeInRightBig" data-animation-delay="200"> 
-                    <h3 class="section-heading">Keynotes</h3>
+                    <h3 class="section-heading">Keynote Speakers</h3>
             
                     <!--div class="sub-title lead3">Lorem ipsum dolor sit atmet sit dolor greand fdanrh<br> sdfs sit atmet sit dolor greand fdanrh sdfs</div-->
-                    <p class="lead"  style="text-align:justify">
-                       TBD
-                    </p> 
+                    <div class="row wow fadeInRightBig"  data-animation-delay="200">
+                        <div class="col-sm-2 wow fadeInRightBig"  data-animation-delay="200">   
+                            <center><img  class="img-responsive img-rounded" style="border-radius: 50%" height="150" width="150" src="2024/img/keynoteSpeaker/PiotrKoniusz.jpg" alt=""></center>
+                            <h4 class="section-heading"><center><a href="">Piotr Koniusz</a></center></h4>
+                        </div>
+                        <div class="col-sm-10 wow fadeInRightBig"  data-animation-delay="200">   
+                            Piotr Koniusz is a Principal Research Scientist in the Machine Learning Research Group at Data61/CSIRO and
+                            an Honorary Associate Professor at the Australian National University. He obtained a BSc in Telecommunications and Software Engineering in 2004 from Warsaw University of Technology, Poland, and a PhD in Computer Vision in
+                            2013 at CVSSP, University of Surrey, UK. Between 2013-2015, he was a postdoctoral researcher with the LEAR
+                            team at INRIA, France. Dr. Koniusz’s research interests are centered around representation learning and learning-to-
+                            learn paradigms, with a focus on contrastive, incremental and few-shot learning across various data modalities. His
+                            contributions to the field have been recognized through the Sang Uk Lee Best Student Paper Award at ACCV’22 and
+                            the Runner-up APRS/IAPR Best Student Paper Award at DICTA’22. He has served as a Workshop Program Co-Chair for NeurIPS’23.
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row wow fadeInRightBig"  data-animation-delay="200">
+                        <div class="col-sm-2 wow fadeInRightBig"  data-animation-delay="200">   
+                            <center><img  class="img-responsive img-rounded" style="border-radius: 50%" height="150" width="150" src="2024/img/keynoteSpeaker/QianruSun.jpg" alt=""></center>
+                            <h4 class="section-heading"><center><a href="">Qianru Sun</a></center></h4>
+                        </div>
+                        <div class="col-sm-10 wow fadeInRightBig"  data-animation-delay="200">   
+                            Qianru Sun is an assistant professor of computer science at the School of Computing and Information Systems (SCIS), at Singapore Management University (SMU). 
+                            Here is her faculty profile. From 2018 to 2019, she was a research fellow working with Prof. Tat-Seng Chua at the National University of Singapore and Prof.Dr. Bernt Schiele at the MPI for Informatics. 
+                            From 2016 to 2018, she held the Lise Meitner Award Fellowship and worked with Prof.Dr. Bernt Schiele and Prof. Dr. Mario Fritz at the MPI for Informatics. 
+                            She got my Ph.D. degree from Peking University in 2016 and her thesis was advised by Prof. Hong Liu. In 2014, she visited the research group of Prof. Tatsuya Harada at the University of Tokyo. 
+                            Her research interests are computer vision and machine learning.
+                        </div>
+                    </div>
+                    <!-- <br>
+                    <div class="row wow fadeInRightBig"  data-animation-delay="200">
+                        <div class="col-sm-2 wow fadeInRightBig"  data-animation-delay="200">   
+                            <center><img  class="img-responsive img-rounded" style="border-radius: 50%" height="150" width="150" src="2024/img/keynoteSpeaker/reza.jpg" alt=""></center>
+                            <h4 class="section-heading"><center><a href="">Qianru Sun</a></center></h4>
+                        </div>
+                        <div class="col-sm-10 wow fadeInRightBig"  data-animation-delay="200">   
+                            Qianru Sun is an assistant professor of computer science at the School of Computing and Information Systems (SCIS), at Singapore Management University (SMU). 
+                            Here is her faculty profile. From 2018 to 2019, she was a research fellow working with Prof. Tat-Seng Chua at the National University of Singapore and Prof.Dr. Bernt Schiele at the MPI for Informatics. 
+                            From 2016 to 2018, she held the Lise Meitner Award Fellowship and worked with Prof.Dr. Bernt Schiele and Prof. Dr. Mario Fritz at the MPI for Informatics. 
+                            She got my Ph.D. degree from Peking University in 2016 and her thesis was advised by Prof. Hong Liu. In 2014, she visited the research group of Prof. Tatsuya Harada at the University of Tokyo. 
+                            Her research interests are computer vision and machine learning.
+                        </div>
+                    </div> -->
+
+                    
                 </div>
             </div>
         </div>
