--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                     <div class="row wow fadeInRightBig"  data-animation-delay="200">
                         <div class="col-sm-2 wow fadeInRightBig"  data-animation-delay="200">   
                             <center><img  class="img-responsive img-rounded" style="border-radius: 50%" height="150" width="150" src="2024/img/keynoteSpeaker/PiotrKoniusz.jpg" alt=""></center>
-                            <h4 class="section-heading"><center><a href="">Piotr Koniusz</a></center></h4>
+                            <h4 class="section-heading"><center><a href="https://users.cecs.anu.edu.au/~koniusz/">Piotr Koniusz</a></center></h4>
                         </div>
                         <div class="col-sm-10 wow fadeInRightBig"  data-animation-delay="200">   
                             Piotr Koniusz is a Principal Research Scientist in the Machine Learning Research Group at Data61/CSIRO and
@@ -452,7 +452,7 @@
                     <div class="row wow fadeInRightBig"  data-animation-delay="200">
                         <div class="col-sm-2 wow fadeInRightBig"  data-animation-delay="200">   
                             <center><img  class="img-responsive img-rounded" style="border-radius: 50%" height="150" width="150" src="2024/img/keynoteSpeaker/QianruSun.jpg" alt=""></center>
-                            <h4 class="section-heading"><center><a href="">Qianru Sun</a></center></h4>
+                            <h4 class="section-heading"><center><a href="https://qianrusun.com/">Qianru Sun</a></center></h4>
                         </div>
                         <div class="col-sm-10 wow fadeInRightBig"  data-animation-delay="200">   
                             Qianru Sun is an assistant professor of computer science at the School of Computing and Information Systems (SCIS), at Singapore Management University (SMU). 
@@ -462,20 +462,23 @@
                             Her research interests are computer vision and machine learning.
                         </div>
                     </div>
-                    <!-- <br>
+                    <br>
                     <div class="row wow fadeInRightBig"  data-animation-delay="200">
                         <div class="col-sm-2 wow fadeInRightBig"  data-animation-delay="200">   
                             <center><img  class="img-responsive img-rounded" style="border-radius: 50%" height="150" width="150" src="2024/img/keynoteSpeaker/reza.jpg" alt=""></center>
-                            <h4 class="section-heading"><center><a href="">Qianru Sun</a></center></h4>
+                            <h4 class="section-heading"><center><a href="https://users.monash.edu.au/~gholamrh/">Gholamreza (Reza) Haffari</a></center></h4>
                         </div>
-                        <div class="col-sm-10 wow fadeInRightBig"  data-animation-delay="200">   
-                            Qianru Sun is an assistant professor of computer science at the School of Computing and Information Systems (SCIS), at Singapore Management University (SMU). 
+                        <div class="col-sm-10 wow fadeInRightBig"  data-animation-delay="200"> 
+                            <p class="lead"  style="text-align:justify">
+                                Updating
+                             </p> 
+                            <!-- Qianru Sun is an assistant professor of computer science at the School of Computing and Information Systems (SCIS), at Singapore Management University (SMU). 
                             Here is her faculty profile. From 2018 to 2019, she was a research fellow working with Prof. Tat-Seng Chua at the National University of Singapore and Prof.Dr. Bernt Schiele at the MPI for Informatics. 
                             From 2016 to 2018, she held the Lise Meitner Award Fellowship and worked with Prof.Dr. Bernt Schiele and Prof. Dr. Mario Fritz at the MPI for Informatics. 
                             She got my Ph.D. degree from Peking University in 2016 and her thesis was advised by Prof. Hong Liu. In 2014, she visited the research group of Prof. Tatsuya Harada at the University of Tokyo. 
-                            Her research interests are computer vision and machine learning.
+                            Her research interests are computer vision and machine learning. -->
                         </div>
-                    </div> -->
+                    </div>
 
                     
                 </div>
