--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                             <br>
                             <b>Title: Adaptation Without Forgetting: Repurposing Foundation Models for Zero-Shot and Few-Shot Semantic Segmentation</b> 
                             <br>
-                            <b>Abstarct:</b> Foundation vision models, trained either in a supervised or unsupervised manner, possess extensive knowledge about diverse object appearances. 
+                            <b>Abstract:</b> Foundation vision models, trained either in a supervised or unsupervised manner, possess extensive knowledge about diverse object appearances. 
                              These models are often adapted for new computer vision tasks, such as transitioning from classification to segmentation, by adding additional parameters. 
                              However, in practice this adaptation often relies on a limited set of object categories, causing the system to overfit to the "seen category" and leading to the forgetting of the foundation model's knowledge about other categories. 
                              In this talk, we present our recent efforts to address this challenge, with a focus on zero-shot and few-shot semantic segmentation applications. 
