--- a/index.html
+++ b/index.html
@@ -226,14 +226,10 @@
                             <h4 class="section-heading"><center><a href="https://users.monash.edu.au/~gholamrh/">Gholamreza (Reza) Haffari</a></center></h4>
                         </div>
                         <div class="col-sm-10 wow fadeInRightBig"  data-animation-delay="200"> 
-                            <p class="lead"  style="text-align:justify">
-                                Updating
-                             </p> 
-                            <!-- Qianru Sun is an assistant professor of computer science at the School of Computing and Information Systems (SCIS), at Singapore Management University (SMU). 
-                            Here is her faculty profile. From 2018 to 2019, she was a research fellow working with Prof. Tat-Seng Chua at the National University of Singapore and Prof.Dr. Bernt Schiele at the MPI for Informatics. 
-                            From 2016 to 2018, she held the Lise Meitner Award Fellowship and worked with Prof.Dr. Bernt Schiele and Prof. Dr. Mario Fritz at the MPI for Informatics. 
-                            She got my Ph.D. degree from Peking University in 2016 and her thesis was advised by Prof. Hong Liu. In 2014, she visited the research group of Prof. Tatsuya Harada at the University of Tokyo. 
-                            Her research interests are computer vision and machine learning. -->
+                            Gholamreza (Reza) Haffari is a Professor in the Department of Data Science and Artificial Intelligence (DSAI), Monash University, Australia. 
+                            He is an Australian Research Council (ARC) Future Fellow and the Director of the Vision and Language Group. 
+                            Reza’s research has been supported by awards and grants from government and industry, including ARC, Google Research, Amazon Research, eBay Research, and Adobe Research. 
+                            His research is in the intersection of Natural Language Processing, Deep Learning, and Machine Learning.
                         </div>
                     </div>
                     <br>
