add Piotr keynote

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                             <span class="badge bg-primary shadow-secondary fs-sm">Keynote Speaker</span>
                         </td>
                         <td class="column2">
-                            <h4 class="section-heading">Keynote: TBD</h4>
+                            <h4 class="section-heading">Keynote: Zero- and Few-shot Keypoint Detection: from modulation to multimodal prompting</h4>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
                                     <a href="javascript:void(0)" class="abstract" onclick="toggleAbstractContent('Koniusz_abstract')">
@@ -309,7 +309,12 @@
                                     </a>
                                 </li>
                                 <div id="Koniusz_abstract" class="abstract-content">
-                                   TBD
+                                    Keypoint detection has been an important topic in computer vision over 20 years. 
+                                    Early methods relied on unsupervised techniques such as Hessian or Harris corner detectors, or SIFT interest points. 
+                                    Modern keypoint detection can now be performed within a few-shot learning paradigm, where annotated support keypoints (e.g., paw, nose, ears, eyes) are detected in an unannotated query. 
+                                    Applications of such keypoints include pose estimation, fine-grained recognition, and pose warping. In this talk, I will discuss our earlier work on few-shot keypoint detection (FSKD) that can generalize to unseen animal species (e.g., training on dogs, testing on cats) and keypoint types (e.g., training on paws, testing on ears). 
+                                    I will also cover how saliency maps and DINO can enhance attention in keypoint detection, how one may streamline the traditional modulation and detection into a single step, and use contrastive learning to improve performance. 
+                                    Finally, I will explain our recent work on multimodal (image, text) keypoint prompting using CLIP for generalized zero- and few-shot keypoint detection.
                                 </div>
                             </ul>
                             <div class="col-sm-1 wow fadeInRightBig"  data-animation-delay="200">   
