extended paper submission

--- a/index.html
+++ b/index.html
@@ -631,7 +631,9 @@
             <div class="row wow fadeInRightBig"  data-animation-delay="200">
                 <h3 class="section-heading">Important Dates</h3>
                 <ul class="lead text-justify">
-                    <li>Paper Submission Deadline: <b>27th, July, 2024</b></li>
+                    <li><strike>Paper Submission Deadline: <b>19th, July, 2024</b></strike></li>
+                    <br>
+                    <li><b>Extended</b> Paper Submission Deadline: <b>27th, July, 2024</b></li>
                     <br>
                     <li>Paper Acceptance Notification: <b>5th, Aug, 2024</b></li>
                     <br>
