--- a/index.html
+++ b/index.html
@@ -226,10 +226,13 @@
                             <h4 class="section-heading"><center><a href="https://users.monash.edu.au/~gholamrh/">Gholamreza (Reza) Haffari</a></center></h4>
                         </div>
                         <div class="col-sm-10 wow fadeInRightBig"  data-animation-delay="200"> 
-                            Gholamreza (Reza) Haffari is a Professor in the Department of Data Science and Artificial Intelligence (DSAI), Monash University, Australia. 
-                            He is an Australian Research Council (ARC) Future Fellow and the Director of the Vision and Language Group. 
-                            Reza’s research has been supported by awards and grants from government and industry, including ARC, Google Research, Amazon Research, eBay Research, and Adobe Research. 
-                            His research is in the intersection of Natural Language Processing, Deep Learning, and Machine Learning.
+                            Prof. Gholamreza (Reza) Haffari is a distinguished academic at Monash University's Department of Data Science & Artificial Intelligence, where he also serves as the Director of the Vision & Language Group. 
+                            With a Ph.D. in Computer Science from Simon Fraser University, Haffari has extensively researched and developed generative artificial intelligence systems with a focus on low-level perception and high-level reasoning from multimodal data sources. 
+                            His work spans several crucial areas including the continual knowledge alignment of large language models, safety and alignment of AI systems to human values, and development of LLM-based conversational agents. 
+                            His innovative approaches in AI have earned him recognition such as the ARC Future Fellowship and multiple awards from prestigious associations.
+                            Prof. Haffari's leadership extends into his role as a senior committee member for numerous international AI conferences. His research, backed by substantial funding from organizations like DARPA, Google, and Amazon, aims to develop trustworthy AI technologies in critical areas such as digital health and law. 
+                            His ongoing projects and collaborations continue to set benchmarks in the AI research community, fostering developments that align technological advancements with societal needs and values.
+
                         </div>
                     </div>
                     <br>
@@ -391,7 +394,7 @@
                             <span class="badge bg-primary shadow-secondary fs-sm">Keynote Speaker</span>
                         </td>
                         <td class="column2">
-                            <h4 class="section-heading">Keynote: TBD</h4>
+                            <h4 class="section-heading">Keynote: Evolving AI: Advancing Continual Learning in Large Language Models</h4>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
                                     <a href="javascript:void(0)" class="abstract" onclick="toggleAbstractContent('Reza_abstract')">
@@ -404,7 +407,10 @@
                                     </a>
                                 </li>
                                 <div id="Reza_abstract" class="abstract-content">
-                                   TBD
+                                    Continual learning with large language models (LLMs) is crucial for enabling AI systems to adapt and evolve in real-time, maintaining and enhancing knowledge without succumbing to catastrophic forgetting, thereby ensuring sustained operational efficiency and relevance. 
+                                    This report explores the integration of continual learning with large language models across multi-modal information sources. We begin by reviewing traditional continual learning, illustrating its application in text, image, and speech extraction, and multi-modal knowledge graph construction. 
+                                    We then redefine continual learning for LLMs, focusing on overcoming catastrophic forgetting and enhancing knowledge retention through continual pre-training, instruction tuning, and alignment. Looking ahead, we discuss challenges such as data evolution and contamination and propose innovations in architectures and learning paradigms, including language agents evolution and proactive continual learning.
+
                                 </div>
                             </ul>
                             <div class="col-sm-1 wow fadeInRightBig"  data-animation-delay="200">   
