--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <h3 class="h3_home wow fadeIn" data-wow-delay="0.6s" style="text-shadow: 0px 8px 4px black, 0 0 25px black"> 
                     <!-- In conjunction with <a style="color:rgb(241, 173, 130)" href="http://www.adai.ai/dai/2024/" target="_blank"><b>DAI 2024</b></a> </p>  -->
                     In conjunction with <a style="color:rgb(241, 173, 130)" href="https://2024.acmmm.org/" target="_blank"><b>ACM MM 2024</b></a> </p> 
-                    28 October - 1 November, 2024 (9:00 AM - 17:00 PM)</p>
+                    1 November, 2024 (9:00 AM - 17:30 PM)</p>
                     Location: Melbourne, Australia</p>
                     <!-- Location: UTC-12, Singapore</p> -->
                 </h3>
@@ -288,14 +288,14 @@
                     </tr>
 
                     <tr class="info otherrow">
-                        <td><h4 class="section-heading">10 min</h4></td>
-                        <td><h4 class="section-heading">Welcome + Opening</h4>
+                        <td><h4 class="section-heading">09:00-09:05</h4></td>
+                        <td><h4 class="section-heading">Opening Remarks</h4>
                         </td>
                     </tr>
 
                     <tr class="info otherrow">
                         <td class="column1">
-                            <h4 class="section-heading">30 min</h4>
+                            <h4 class="section-heading">09:05-0950</h4>
                             <span class="badge bg-primary shadow-secondary fs-sm">Keynote Speaker</span>
                         </td>
                         <td class="column2">
@@ -352,7 +352,7 @@
                             
                         </td> -->
                         <td class="column1">
-                            <h4 class="section-heading">30 min</h4>
+                            <h4 class="section-heading">09:50-10:30</h4>
                             <span class="badge bg-primary shadow-secondary fs-sm">Keynote Speaker</span>
                         </td>
                         <td class="column2">
@@ -388,9 +388,18 @@
                         </td>
                     </tr>
 
+                    <tr class="bginfo otherrow">
+                        <td>
+                            <h4 class="section-heading">10:30-11:00</h4>
+                        </td>
+                        <td>
+                            <h4 class="section-heading">Morning Tea</h4>
+                        </td>
+                    </tr>
+
                     <tr class="info otherrow">
                         <td class="column1">
-                            <h4 class="section-heading">30 min</h4>
+                            <h4 class="section-heading">11:00-11:45</h4>
                             <span class="badge bg-primary shadow-secondary fs-sm">Keynote Speaker</span>
                         </td>
                         <td class="column2">
@@ -427,7 +436,7 @@
 
                     <tr class="info otherrow">
                         <td class="column1">
-                            <h4 class="section-heading">30 min</h4>
+                            <h4 class="section-heading">11:45-12:20</h4>
                             <span class="badge bg-primary shadow-secondary fs-sm">Keynote Speaker</span>
                         </td>
                         <td class="column2">
@@ -464,39 +473,57 @@
                         </td>
                     </tr>
 
-                    <tr class="info otherrow">
+                    <tr class="bginfo otherrow">
                         <td>
-                            <h4 class="section-heading">...</h4>
+                            <h4 class="section-heading">12:30-14:00</h4>
                         </td>
                         <td>
-                            <h4 class="section-heading">...</h4>
+                            <h4 class="section-heading">Lunch</h4>
+                        </td>
+                    </tr>
+
+                    <tr class="info otherrow">
+                        <td>
+                            <h4 class="section-heading">14:00-14:45</h4>
+                        </td>
+                        <td>
+                            <h4 class="section-heading">Fast and Accurate Continual Test Time Domain Adaptation</h4>
+                        </td>
+                    </tr>
+
+                    <tr class="info otherrow">
+                        <td>
+                            <h4 class="section-heading">14:45-15:30</h4>
+                        </td>
+                        <td>
+                            <h4 class="section-heading">Incremental Image Generation with Diffusion Models by Label Embedding Initialization and Fusion</h4>
                         </td>
                     </tr>
 
                     <tr class="bginfo otherrow">
                         <td>
-                            <h4 class="section-heading">10 min</h4>
+                            <h4 class="section-heading">15:30-16:00</h4>
                         </td>
                         <td>
-                            <h4 class="section-heading">Coffee Break</h4>
-                        </td>
-                    </tr>
-
-                    <tr class="info otherrow">
-                        <td>
-                            <h4 class="section-heading">...</h4>
-                        </td>
-                        <td>
-                            <h4 class="section-heading">...</h4>
+                            <h4 class="section-heading">Afternoon Tea</h4>
                         </td>
                     </tr>
 
                     <tr class="info otherrow">
                         <td>
-                            <h4 class="section-heading">30 min</h4>
+                            <h4 class="section-heading">16:00-16:45</h4>
                         </td>
                         <td>
-                            <h4 class="section-heading">Round Table Discussion</h4>
+                            <h4 class="section-heading">FAM-Logo: Forward Compatible Multimodal Framework for Few-Shot Logo Incremental Classification</h4>
+                        </td>
+                    </tr>
+
+                    <tr class="info otherrow">
+                        <td>
+                            <h4 class="section-heading">16:45-17:30</h4>
+                        </td>
+                        <td>
+                            <h4 class="section-heading">Panel & Closing Remarks</h4>
                         </td>
                     </tr>
 
@@ -639,11 +666,11 @@
                 <ul class="lead text-justify">
                     <li><strike>Paper Submission Deadline: <b>19th, July, 2024</b></strike></li>
                     <br>
-                    <li><b>Extended</b> Paper Submission Deadline: <b>27th, July, 2024</b></li>
+                    <li><strike><b>Extended</b> Paper Submission Deadline: <b>27th, July, 2024</b></strike></li>
                     <br>
-                    <li>Paper Acceptance Notification: <b>5th, Aug, 2024</b></li>
+                    <li><strike>Paper Acceptance Notification: <b>5th, Aug, 2024</b></strike></li>
                     <br>
-                    <li>Camera-Ready Deadline: <b>19th, Aug, 2024</b></li>
+                    <li><strike>Camera-Ready Deadline: <b>19th, Aug, 2024</b></strike></li>
                     <br>                
                 </ul>
             </div>
