--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                             
                         </td> -->
                         <td class="column1">
-                            <h4 class="section-heading">09:50-10:30</h4>
+                            <h4 class="section-heading">09:50-10:35</h4>
                             <span class="badge bg-primary shadow-secondary fs-sm">Keynote Speaker</span>
                         </td>
                         <td class="column2">
@@ -390,7 +390,7 @@
 
                     <tr class="bginfo otherrow">
                         <td>
-                            <h4 class="section-heading">10:30-11:00</h4>
+                            <h4 class="section-heading">10:35-11:00</h4>
                         </td>
                         <td>
                             <h4 class="section-heading">Morning Tea</h4>
@@ -436,7 +436,7 @@
 
                     <tr class="info otherrow">
                         <td class="column1">
-                            <h4 class="section-heading">11:45-12:20</h4>
+                            <h4 class="section-heading">11:45-12:30</h4>
                             <span class="badge bg-primary shadow-secondary fs-sm">Keynote Speaker</span>
                         </td>
                         <td class="column2">
@@ -484,7 +484,7 @@
 
                     <tr class="info otherrow">
                         <td>
-                            <h4 class="section-heading">14:00-14:45</h4>
+                            <h4 class="section-heading">14:00-14:30</h4>
                         </td>
                         <td>
                             <h4 class="section-heading">Fast and Accurate Continual Test Time Domain Adaptation</h4>
@@ -493,10 +493,19 @@
 
                     <tr class="info otherrow">
                         <td>
-                            <h4 class="section-heading">14:45-15:30</h4>
+                            <h4 class="section-heading">14:30-15:00</h4>
                         </td>
                         <td>
                             <h4 class="section-heading">Incremental Image Generation with Diffusion Models by Label Embedding Initialization and Fusion</h4>
+                        </td>
+                    </tr>
+
+                    <tr class="info otherrow">
+                        <td>
+                            <h4 class="section-heading">15:00-15:30</h4>
+                        </td>
+                        <td>
+                            <h4 class="section-heading">EAGLE Network: A Novel Incremental Learning Framework for Detecting Unknown Logos in Open-World Environments</h4>
                         </td>
                     </tr>
 
@@ -511,7 +520,7 @@
 
                     <tr class="info otherrow">
                         <td>
-                            <h4 class="section-heading">16:00-16:45</h4>
+                            <h4 class="section-heading">16:00-16:30</h4>
                         </td>
                         <td>
                             <h4 class="section-heading">FAM-Logo: Forward Compatible Multimodal Framework for Few-Shot Logo Incremental Classification</h4>
@@ -520,7 +529,7 @@
 
                     <tr class="info otherrow">
                         <td>
-                            <h4 class="section-heading">16:45-17:30</h4>
+                            <h4 class="section-heading">16:30-17:15</h4>
                         </td>
                         <td>
                             <h4 class="section-heading">Panel & Closing Remarks</h4>
