--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                             <span class="badge bg-primary shadow-secondary fs-sm">Keynote Speaker</span>
                         </td>
                         <td class="column2">
-                            <h4 class="section-heading">Keynote: Class Incremental Learning for Image Classification</h4>
+                            <h4 class="section-heading">Keynote: Adapting Foundation Models: A Case Study on Remote Sensing Imagery</h4>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
                                     <a href="javascript:void(0)" class="abstract" onclick="toggleAbstractContent('QianruSun_abstract')">
