add Pro. Sun's slides

--- a/index.html
+++ b/index.html
@@ -378,8 +378,8 @@
                                 </li>
                                 <li class="list-inline-item">
                                     <a href="" target="_blank">
-                                        <h4 class="table_button"><b>[Slides]</b></h4>
-                                    </a>
+                                        <a href="./2024/slides/Adapting Foundation Models A Case Study on Remote Sensing Imagery.pdf"><h4 class="table_button"><b>[Slides]</b></h4>
+                                    </a></a>
                                 </li>
                                 <div id="QianruSun_abstract" class="abstract-content">
                                     Large visual models, such as CLIP and Stable Diffusion (SD), demonstrate remarkable performance in general image recognition and generation tasks. 
