--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      <meta name="description" content="ACM MM 2024 Workshop on Continual Learning">
      <meta name="author" content="">
  
-     <title>CL-24: Continual Learning meets Multimodal Foundation Models: Fundamentals and Advances</title>
+     <title>Continual Learning meets Multimodal Foundation Models: Fundamentals and Advances</title>
  
      <!-- Bootstrap core CSS -->
      <link href="./css/bootstrap.min.css" rel="stylesheet">
@@ -72,9 +72,8 @@
                 <!-- <br> -->
                 <h3 class="h3_home wow fadeIn" data-wow-delay="0.6s" style="text-shadow: 0px 8px 4px black, 0 0 25px black"> 
                     <!-- In conjunction with <a style="color:rgb(241, 173, 130)" href="http://www.adai.ai/dai/2024/" target="_blank"><b>DAI 2024</b></a> </p>  -->
-                    In conjunction with <a style="color:rgb(241, 173, 130)" href="https://2024.acmmm.org/" target="_blank"><b>ACM MM 2024</b></a> </p> 
-                    1 November, 2024 (9:00 AM - 17:30 PM)</p>
-                    Location: Melbourne, Australia</p>
+                    <a style="color:rgb(241, 173, 130)" href="https://acmmm-cl.github.io/2024/" target="_blank"><b>ACM MM CL 2024</b></a> </p> 
+                    <a style="color:rgb(241, 173, 130)" href="https://acmmm-cl.github.io/2025/" target="_blank"><b>ACM MM CL 2025</b></a> </p> 
                     <!-- Location: UTC-12, Singapore</p> -->
                 </h3>
             </div>
