--- a/index.html
+++ b/index.html
@@ -191,11 +191,11 @@
                        
                         <div class="row wow fadeInRightBig"  data-animation-delay="200">
 
-                           <div class="col-sm-20 wow fadeInRightBig"  data-animation-delay="200">   
+                           <!-- <div class="col-sm-20 wow fadeInRightBig"  data-animation-delay="200">   
                                <center><img  class="img-responsive img-rounded" style="border-radius: 50%" height="120" width="120" src="2025/img/keynoteSpeaker/MengFang.jpeg" alt=""></center>
                                <h4 class="section-heading"><center><a href="https://mengfn.github.io/">Meng Fang</a></center></h4>
                                <h5 class="section-heading"><center><i>University of Liverpool</i></center></h5>
-                           </div>
+                           </div> -->
 
                            <div class="col-sm-20 wow fadeInRightBig"  data-animation-delay="200">   
                                <center><img  class="img-responsive img-rounded" style="border-radius: 50%" height="120" width="120" src="2025/img/keynoteSpeaker/WenyaWang.jpeg" alt=""></center>
